--- a/DenateExample.uproject
+++ b/DenateExample.uproject
@@ -2,18 +2,5 @@
 	"FileVersion": 3,
 	"EngineAssociation": "5.2",
 	"Category": "",
-	"Description": "",
-	"Plugins": [
-		{
-			"Name": "ModelingToolsEditorMode",
-			"Enabled": true,
-			"TargetAllowList": [
-				"Editor"
-			]
-		},
-		{
-			"Name": "DenatePlugin",
-			"Enabled": true
-		}
-	]
+	"Description": ""
 }
